# template

./: .coverage.infra.timelock.local.95021.XLIwttix  .coverage.infra.timelock.local.95040.XFmzweFx  .coverage.infra.timelock.local.95085.XqPMBbCx  .coverage.infra.timelock.local.95087.XHnaMQEx  .coverage.infra.timelock.local.95093.XHuRJhwx  .coverage.infra.timelock.local.95094.XNydFYgx  .coverage.infra.timelock.local.95095.XtepvVtx  .coverage.infra.timelock.local.95519.XzKnmkGx  .coverage.project  .coveragerc  .cursorrules  .dockerignore  .env.template  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLOUD_DEPLOY.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  COPYPASTA.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_IMPLEMENTATION_SUMMARY.md  DOCUMENTATION_REVIEW_REPORT.md  DOCUMENTATION_VERIFICATION_REPORT.md  Dockerfile  EXAMPLES.md  EXAMPLES_SHOWCASE.md  FAQ.md  FINAL_VERIFICATION.md  HOW_TO_USE.md  HYPERLINK_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  (+53 more)
project/: AGENTS.md  README.md  pyproject.toml
project/docs/: infrastructure_usage.md  refactor_hotspots.md  refactor_playbook.md  testing_expansion_plan.md  validation_guide.md  ways.md
project/manuscript/: 01_abstract.md  02_introduction.md  03_methodology.md  04_experimental_results.md  05_discussion.md  06_conclusion.md  07_literature_review.md  08_acknowledgments.md  09_appendix.md  98_symbols_glossary.md  AGENTS.md  README.md  S01_supplemental_methods.md  S02_supplemental_results.md  S03_supplemental_analysis.md  S04_supplemental_applications.md  config.yaml  config.yaml.example  preamble.md  references.bib
project/output/: project_combined.html  project_combined.md  project_combined_backup.html
project/scripts/: AGENTS.md  README.md  analysis_pipeline.py  basic_grafting_figures.py  biological_process_simulation.py  collect_manuscript_data.py  comprehensive_analysis.py  db_setup.py  example_figure.py  generate_biological_figures.py  generate_figures.py  generate_grafting_figures.py  generate_manuscript_figures.py  generate_research_figures.py  generate_scientific_figures.py  graft_analysis_pipeline.py  manuscript_preflight.py  quality_report.py  scientific_simulation.py
project/src/: AGENTS.md  README.md  __init__.py  algebra.py  biological_simulation.py  comparison.py  compatibility_prediction.py  complexity.py  database.py  diagrams.py  economic_analysis.py  evaluation.py  expressions.py  forms.py  graft_analysis.py  graft_basics.py  graft_data_generator.py  graft_data_processing.py  graft_metrics.py  graft_parameters.py  graft_plots.py  graft_reporting.py  graft_statistics.py  graft_validation.py  graft_visualization.py  house_of_knowledge.py  metrics.py  models.py  network_analysis.py  parameters.py  plots.py  reduction.py  rootstock_analysis.py  seasonal_planning.py  species_database.py  sql_queries.py  statistics.py  technique_library.py  theorems.py  validation.py  (+4 more)
project/tests/: AGENTS.md  README.md  conftest.py  test_algebra.py  test_biological_simulation.py  test_compatibility_prediction.py  test_complexity.py  test_comprehensive_analysis.py  test_database.py  test_economic_analysis.py  test_evaluation.py  test_forms.py  test_generate_figures.py  test_graft_analysis.py  test_graft_basics.py  test_graft_data_generator.py  test_graft_data_processing.py  test_graft_metrics.py  test_graft_parameters.py  test_graft_plots.py  test_graft_reporting.py  test_graft_statistics.py  test_graft_validation.py  test_graft_visualization.py  test_house_of_knowledge.py  test_models.py  test_network_analysis.py  test_package_imports.py  test_reduction.py  test_rootstock_analysis.py  test_seasonal_planning.py  test_simulation_coverage.py  test_species_database.py  test_sql_queries.py  test_statistics.py  test_technique_library.py  test_theorems.py  test_validation.py  test_verification.py  test_ways_analysis.py  (+1 more)
projects/active_inference_meta_pragmatic/: AGENTS.md  PAI.md  README.md  pyproject.toml
projects/area_handbook/: AGENTS.md  README.md  pyproject.toml
projects/blake_active_inference/: AGENTS.md  README.md  pyproject.toml
projects/blake_bimetalism/: AGENTS.md  README.md  pyproject.toml
projects/code_project/: .coverage.project  AGENTS.md  PAI.md  README.md  TO-DO.md  coverage_project.json  pyproject.toml
projects/density_bioscales/: AGENTS.md  README.md  pyproject.toml
projects/ento_linguistics/: .coverage.project  .coverage.timelock.local.82064.XXhymFCx  .coverage.timelock.local.82080.XiGeDHDx  .coverage.timelock.local.82083.XBTlfuex  .coverage.timelock.local.82084.XFrqgYkx  .coverage.timelock.local.82094.XMThFFOx  .coverage.timelock.local.82193.XkmnJJox  .coverage.timelock.local.82204.XAwBBcqx  .coverage.timelock.local.82207.XzClsvAx  .coverage.timelock.local.82214.XynCSfHx  .coverage.timelock.local.82219.XfAmgxMx  .coverage.timelock.local.82846.XcnpHalx  .coverage.timelock.local.82864.XfIDHLEx  .coverage.timelock.local.82917.XemrQjBx  .coverage.timelock.local.82918.XSnZgXpx  .coverage.timelock.local.83019.XaFxtNXx  .coverage.timelock.local.83020.XgSRTQqx  .coverage.timelock.local.83027.XheUAOox  .coverage.timelock.local.83063.XYOWIJvx  .coverage.timelock.local.83068.XhIARZgx  .coverage.timelock.local.83084.XNDUbZNx  .coverage.timelock.local.83089.XkjsqzWx  .coverage.timelock.local.83118.XkZSeLCx  .coverage.timelock.local.83125.XrGsNnox  .coverage.timelock.local.83290.XsrOQELx  .coverage.timelock.local.83292.XSgxXlux  .coverage.timelock.local.83354.XcYpIHDx  .markdownlint.json  AGENTS.md  README.md  coverage_project.json  pyproject.toml
projects/fep_lean/: .gitignore  AGENTS.md  PAI.md  pyproject.toml
projects/small_code_project/: AGENTS.md  README.md  pyproject.toml
projects/small_prose_project/: AGENTS.md  README.md  pyproject.toml
projects/special_number_proximity/: AGENTS.md  README.md  pyproject.toml
projects/template/: AGENTS.md  README.md  pyproject.toml
projects/template_active_inference/: .zenodo.json  AGENTS.md  CITATION.cff  README.md  domain_profile.yaml  tracks.yaml  (+3 more)
(+12761 files in other folders)
