# Research Project Template Configuration
# 
# This is a comprehensive template for research projects with test-driven development,
# automated PDF generation, and professional documentation structure.
#
# For documentation and usage, see:
# - README.md - Project overview and quick start
# - docs/RUN_GUIDE.md - Pipeline and command guide
# - docs/architecture/two-layer-architecture.md - System design overview
# - docs/architecture/thin-orchestrator-summary.md - Thin orchestrator pattern
# - docs/usage/examples-showcase.md - Example projects and workflows
#
# Repository: https://github.com/docxology/template

[project]
name = "research-project-template"
version = "3.4.0"
description = "A comprehensive template for research projects with test-driven development, automated PDF generation, and professional documentation structure"
authors = [{ name = "Research Template Team" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["research", "template", "academic", "scientific", "documentation", "pdf-generation", "test-driven-development"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
  # numpy and matplotlib are core because infrastructure/scientific/ uses them for
  # benchmarking and figure generation — not optional for projects using this template
  "numpy>=1.22",
  "pyyaml>=6.0",
  # tomllib was added to the stdlib in Python 3.11; backport for 3.10.
  "tomli>=2.0; python_version < '3.11'",
  # typing.NotRequired / datetime.UTC added in Python 3.11; backport for 3.10.
  "typing-extensions>=4.0; python_version < '3.11'",
  "pillow>=10.0",
  "matplotlib>=3.7",
  # scipy, scikit-learn, wordcloud, rdflib are in [scientific] optional group — install with:
  # uv sync --group scientific
  # requests is in the [llm] dep group — install with: uv sync --group llm
  "networkx>=3.4.2",
  "seaborn>=0.13.2",
  "scipy>=1.15.3",
  "textstat>=0.7.13",
  "jsonschema>=4.0.0",
]


# NOTE: [project.scripts] removed — entries were shell commands, not Python
# entrypoint references (PEP 517 violation). Use `uv run pytest ...` or
# the scripts/ directory for dev workflows.  package = false (line 120) means
# no console_scripts are installed anyway.

[dependency-groups]
# Optional scientific computing (used by act_inf_metaanalysis project; not needed for core template)
scientific = [
  "scipy>=1.10.0",
  "pandas>=2.0.0",
  "rdflib>=7.0.0",
  "wordcloud>=1.9.0",
  "scikit-learn>=1.3.0",
]
# Optional LLM integration (requires running Ollama server and requests HTTP library)
llm = [
  "requests>=2.31.0",
]
# Optional rendering enhancements (lazily imported in manuscript_overview.py and pdf_validator.py)
rendering = [
  "reportlab>=4.0.0",
  "pypdf>=6.12.0",  # >=6.12.0 fixes CVE-2026-48155 / CVE-2026-48156 (pip-audit gate)
  "pdfplumber>=0.11.0",
]
# Optional dashboard generation (lazily imported in dashboard_generator.py)
dashboard = [
  "plotly>=5.0.0",
]
# Optional .env file loading (used in infrastructure/core/credentials.py, gracefully absent)
dotenv = [
  "python-dotenv>=1.0.0",
]
# Optional barcode generation for steganography module (gracefully absent)
steganography = [
  "cryptography>=48.0.1",  # >=48.0.1 fixes GHSA-537c-gmf6-5ccf (pip-audit gate)
  "qrcode[pil]>=8.2",
  "python-barcode>=0.15",
]
# Optional resource monitoring (gracefully absent via try/except in logging_utils.py)
monitoring = [
  "psutil>=5.9.0",
]
# DisCoPy (string diagrams for projects/cognitive_case_diagrams; in default-groups so
# `uv sync` at repo root matches CI `uv sync --group discopy` and those tests pass locally)
discopy = [
    "discopy>=1.0.0",
    # hypothesis: see [dependency-groups] dev (root pytest loads _hypothesis_pytestplugin)
]
# Opt-in timeseries forecasting benchmarks (tests/integration/test_timeseries_benchmarks.py)
timeseries-bench = [
    "statsmodels>=0.14.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",  # required by lightgbm.sklearn for bench forecasts
]
# Development dependencies (replaces deprecated tool.uv.dev-dependencies)
dev = [
    "hypothesis>=6.151.11",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-httpserver>=1.0.8",  # Local HTTP test server for no-mocks policy
    "pytest-timeout>=2.0",  # Test timeout plugin to prevent hanging tests
    "mypy>=1.17.1",
    "pip-audit>=2.0.0",
    "bandit>=1.7.0",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.0.0",  # Opt-in performance benches under tests/infra_tests/benchmark/ (see MED6)
    "iniconfig>=2.3.0",
    "types-requests>=2.32.4.20260107",
    "types-pyyaml>=6.0.12.20250915",
    "black>=23.0",
    # Code-health scanner (Python 3.11+ only; template still supports 3.10 for projects)
    "desloppify @ git+https://github.com/peteromallet/desloppify.git; python_version >= '3.11'",
    "pytest-xdist>=3.5",
]
deep-research = [
    "google-genai>=1.0",
    "openai>=1.60",
    # Loads the repo .env (OPENAI_API_KEY / GEMINI_API_KEY) so `providers`,
    # `submit`, and `run-project` see credentials without a manual `export`.
    # config.ensure_dotenv_loaded() also has a built-in fallback parser, so the
    # package still finds keys if this extra is somehow absent.
    "python-dotenv>=1.0.0",
]

[tool.uv]
# uv-specific configuration
managed = true  # Use uv's virtual environment management
package = false  # This is not a distributable package
default-groups = ["dev", "rendering", "discopy", "steganography"]
# pip-api (via pip-audit) pins an older pip; bump so pip-audit passes CVE gates (CVE-2026-3219).
override-dependencies = [
    "pip>=26.1.1",
]

[tool.uv.workspace]
# Workspace configuration for multi-project support
# Supports both standalone projects and nested projects within program directories
members = []
exclude = [
    "projects/*/output",
    "projects/*/*/output",
    "output"
]


[tool.pytest.ini_options]
# Pytest configuration (consolidated from pytest.ini)
# projects/templates/template_code_project/src is the canonical example project; add other project src/ paths here if needed
pythonpath = [".", "infrastructure", "projects/templates/template_code_project/src"]
testpaths = ["tests", "tests/integration"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short --strict-markers -W ignore::pytest.PytestDeprecationWarning --durations=10"
timeout = 10  # Timeout individual tests after 10 seconds to prevent hanging
timeout_method = "thread"  # Use thread-based timeout (safer for network operations)
markers = [
    "requires_ollama: requires running Ollama server (auto-started first; FAILS with setup guidance if unavailable, by design). Opt out: -m 'not requires_ollama'. See docs/development/optional-dependencies.md",
    "requires_latex: requires a LaTeX engine (xelatex/pdflatex); SKIPS via skip_if_no_latex when absent. Opt out: -m 'not requires_latex'. See docs/development/optional-dependencies.md",
    "slow: mark test as slow running",
    "integration: mark test as integration test",
    "no_patch_llm_client: marks tests that need real default LLMClient behavior (opts out of autouse fixture)",
    "bench: performance benchmark tests",
    "private_project: tests for private sidecar project tooling",
    "external_fixture: tests requiring downloaded external fixture trees",
]
# pytest-asyncio configuration
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

# Filter specific warnings that may still appear
# These warnings come from pytest plugins and need explicit filtering
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio",
    "ignore::PendingDeprecationWarning:pytest_asyncio",
    "ignore::pytest.PytestDeprecationWarning",
    "ignore::UserWarning",
    "ignore::FutureWarning",
    "ignore:The configuration option.*asyncio_default_fixture_loop_scope.*is unset",
]

[tool.coverage.run]
# Coverage configuration (consolidated from .coveragerc)
# Note: Test runners use --cov-datafile flags for isolation:
#   - Infrastructure tests: --cov-datafile=.coverage.infra
#   - Project tests: --cov-datafile=.coverage.project
branch = true
source = ["infrastructure", "projects/templates/template_code_project/src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/tmp/*",
    "*/temp/*",
    "*/site-packages/*",
    "projects/templates/template_code_project/src/analysis.py",
    "projects/templates/template_code_project/src/dashboard.py",
    # figures.py is the figure-generator extraction split out of analysis.py;
    # the 6 generate_* functions are exercised only through
    # scripts/optimization_analysis.py (end-to-end pipeline run), not in the
    # gate-time unit test suite.
    "projects/templates/template_code_project/src/figures.py",
    "/private/var/folders/*",
]

[tool.coverage.report]
# fail_under = 70 is a global fallback setting
# Individual test runs use 60% (infrastructure) and 90% (project) thresholds
# See AGENTS.md#coverage-system and docs/BUILD_SYSTEM.md for details
fail_under = 70
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]



# ============================================================================
# Ruff Linter Configuration (v2.6.0)
# ============================================================================

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
    "E741",  # Allow short math variable names in scientific code (l, I, O)
]

[tool.ruff.lint.per-file-ignores]
"infrastructure/core/logging/*.py" = ["E402"]  # Conditional imports after setup
"infrastructure/publishing/publish_cli.py" = ["E402"]  # sys.path manipulation before imports
"scripts/*" = ["E402", "E501"]  # sys.path before imports; docstring line length
"projects/*/scripts/**/*.py" = ["E402", "E501"]  # Path bootstrap before imports; long CLI strings
"tests/**/*.py" = ["E712", "E402", "E501"]  # Assertions, conditional imports, long fixture payloads
"__init__.py" = ["F401"]  # Allow re-exports in __init__ files
# E501 in docstrings/comments (ruff format handles code structure line length)
"infrastructure/__init__.py" = ["E501"]  # Module inventory docstring
"infrastructure/documentation/counts_doc.py" = ["E501"]  # Long markdown prose lines in the COUNTS.md template literal
"projects/template_search_project/src/__init__.py" = ["E402"]  # Deferred exports after public __all__
"infrastructure/core/runtime/checkpoint.py" = ["E501"]
"infrastructure/core/errors.py" = ["E501"]
"infrastructure/core/exceptions.py" = ["E501"]
"infrastructure/core/files/*.py" = ["E501"]
"infrastructure/core/pipeline/*.py" = ["E501"]
"infrastructure/llm/*" = ["E501"]
"infrastructure/project/discovery.py" = ["E501"]
"infrastructure/publishing/citations.py" = ["E501"]
"infrastructure/rendering/slides_renderer.py" = ["E501"]
"infrastructure/reporting/*" = ["E501"]
"infrastructure/scientific/templates.py" = ["E501"]
"infrastructure/validation/content/*.py" = ["E501"]
"projects/*/src/**" = ["E501"]

# ============================================================================
# mypy Type Checking Configuration (v2.7.0)
# ============================================================================

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Will tighten per-module as types are narrowed
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
explicit_package_bases = true

# Per-module strict overrides (progressively tightened)
[[tool.mypy.overrides]]
module = "infrastructure.core.health_check"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "infrastructure.core.exceptions"
disallow_untyped_defs = true

# v2.13.0: Strict overrides for rendering package
[[tool.mypy.overrides]]
module = "infrastructure.rendering.*"
disallow_untyped_defs = true

# Type stubs are uneven across these packages; defer until modules are tightened.
[[tool.mypy.overrides]]
module = "infrastructure.reporting.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "infrastructure.llm.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "infrastructure.validation.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "infrastructure.steganography.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "infrastructure.core.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "infrastructure.publishing.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "infrastructure.search.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "infrastructure.orchestration.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "projects.template_prose_project.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "projects.template_active_inference.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "projects.template_search_project.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "projects.what_is_cogsec.*"
ignore_errors = true

# Rotating research projects (animation/visualization/numpy-heavy surface
# intentionally NOT driven to the exemplar type-strictness floor). Public CI
# resolves its mypy paths through infrastructure.project.public_scope, keeping
# the gate on infrastructure + the canonical exemplars without a local private
# or rotating research WIP blocking every contributor's commit and CI.
[[tool.mypy.overrides]]
module = "projects.BeeStack.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "beestack.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "projects.crescent_city.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "_figures.*"
ignore_errors = true

[tool.bandit]
# Exclusions for paths (mirrors `exclude_dirs` in `bandit.yaml`). CI and
# pre-commit use `-c bandit.yaml`; this block keeps ad-hoc `bandit -c pyproject.toml`
# runs aligned.
exclude_dirs = [
    "projects/working",
    "projects/published",
    "projects/archive",
    "projects/other",
    ".venv",
    "site-packages",
    "infrastructure/steganography/kmyth",
]
# B101: assert_used — asserts are used as internal invariants in infrastructure code.
# Suppressing B101 reduces noise without compromising security review of real issues.
skips = ["B101"]
